; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_pipe_scanline_is_moving.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_pipe_scanline_is_moving.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i32 }

@DSL_LINEMASK_GEN2 = common dso_local global i32 0, align 4
@DSL_LINEMASK_GEN3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_i915_private*, i32)* @pipe_scanline_is_moving to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pipe_scanline_is_moving(%struct.drm_i915_private* %0, i32 %1) #0 {
  %3 = alloca %struct.drm_i915_private*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @PIPEDSL(i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.drm_i915_private*, %struct.drm_i915_private** %3, align 8
  %12 = call i64 @IS_GEN(%struct.drm_i915_private* %11, i32 2)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @DSL_LINEMASK_GEN2, align 4
  store i32 %15, i32* %8, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @DSL_LINEMASK_GEN3, align 4
  store i32 %17, i32* %8, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @I915_READ(i32 %19)
  %21 = load i32, i32* %8, align 4
  %22 = and i32 %20, %21
  store i32 %22, i32* %6, align 4
  %23 = call i32 @msleep(i32 5)
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @I915_READ(i32 %24)
  %26 = load i32, i32* %8, align 4
  %27 = and i32 %25, %26
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %28, %29
  %31 = zext i1 %30 to i32
  ret i32 %31
}

declare dso_local i32 @PIPEDSL(i32) #1

declare dso_local i64 @IS_GEN(%struct.drm_i915_private*, i32) #1

declare dso_local i32 @I915_READ(i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
